(PC-28188)[PRO] fix: fix modal z-index

--- a/pro/src/styles/variables/_z-index.scss
+++ b/pro/src/styles/variables/_z-index.scss
@@ -3,8 +3,8 @@ $multidownload-dropdown: 1;
 $datepicker-dropdown: 2;
 $recurrence-sticky-bar: $sticky-bar-z-index + 1; // This is a sticky bar that should "replace" the form sticky bar by going above it
 $select-options-z-index: 3; // The sticky action bar z-index was set to 1. We have to set it to 2 so the select result would display over the sticky bar.
-$modal-z-index: 10;
-$lateral-menu-backdrop-z-index: 11;
-$lateral-menu-z-index: 12;
-$top-header-z-index: 13;
-$lateral-menu-z-index-mobile: 14;
+$lateral-menu-backdrop-z-index: 10;
+$lateral-menu-z-index: 11;
+$top-header-z-index: 12;
+$lateral-menu-z-index-mobile: 13;
+$modal-z-index: 14;
